revert flip effect as backface-visibility is buggy

--- a/modules/chifirst/css/chifirst.css
+++ b/modules/chifirst/css/chifirst.css
@@ -9,36 +9,6 @@
   width: 16.7%;
 /*  padding-bottom: 32%; */
 }
-.card {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  transform-style: preserve-3d;
-  transition: transform 1s;
-}
-.card figure {
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  -o-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-.card .front {
-  background: red;
-}
-.card .back {
-  background: blue;
-  -webkit-transform: rotateY( 180deg );
-  transform: rotateY( 180deg );
-}
-.card.flipped {
-  -webkit-transform: rotateY( 180deg );
-  transform: rotateY( 180deg );
-}
 
 .yaoStageBox {
   float: left;
